gcc/testsuite/rust/rustc/ui/error-codes/E0583.rs
mod module_that_doesnt_exist; // { dg-error ".E0583." "" { target *-*-* } }

fn main() {
}

